backend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADD
    ALTER
    BETWEEN
    IN

Grammar

Rule 0     S' -> statement
Rule 1     statement -> query_content opt_semicolon
Rule 2     query_content -> select_statement
Rule 3     query_content -> set_operation
Rule 4     query_content -> insert_stmt
Rule 5     query_content -> update_stmt
Rule 6     query_content -> delete_stmt
Rule 7     query_content -> create_stmt
Rule 8     query_content -> drop_stmt
Rule 9     query_content -> show_tables_stmt
Rule 10    show_tables_stmt -> SHOW TABLES
Rule 11    select_statement -> SELECT projections FROM from_clause opt_joins opt_where opt_groupby opt_orderby opt_limit
Rule 12    from_clause -> IDENTIFIER
Rule 13    from_clause -> LPAREN select_statement RPAREN
Rule 14    from_clause -> LPAREN select_statement RPAREN AS IDENTIFIER
Rule 15    set_operation -> select_statement UNION select_statement
Rule 16    set_operation -> select_statement INTERSECT select_statement
Rule 17    set_operation -> select_statement EXCEPT select_statement
Rule 18    opt_orderby -> ORDER BY IDENTIFIER opt_asc_desc
Rule 19    opt_orderby -> empty
Rule 20    opt_asc_desc -> ASC
Rule 21    opt_asc_desc -> DESC
Rule 22    opt_asc_desc -> empty
Rule 23    opt_groupby -> GROUP BY group_list opt_having
Rule 24    opt_groupby -> empty
Rule 25    group_list -> qualified_id
Rule 26    group_list -> group_list COMMA qualified_id
Rule 27    opt_having -> HAVING expression
Rule 28    opt_having -> empty
Rule 29    opt_limit -> LIMIT NUMBER
Rule 30    opt_limit -> empty
Rule 31    projections -> STAR
Rule 32    projections -> projection_item
Rule 33    projections -> projections COMMA projection_item
Rule 34    projection_item -> expression
Rule 35    projection_item -> expression AS IDENTIFIER
Rule 36    aggregate_func -> SUM LPAREN qualified_id RPAREN
Rule 37    aggregate_func -> COUNT LPAREN qualified_id RPAREN
Rule 38    aggregate_func -> AVG LPAREN qualified_id RPAREN
Rule 39    aggregate_func -> MIN LPAREN qualified_id RPAREN
Rule 40    aggregate_func -> MAX LPAREN qualified_id RPAREN
Rule 41    opt_joins -> join_list
Rule 42    opt_joins -> empty
Rule 43    join_list -> join_item
Rule 44    join_list -> join_list join_item
Rule 45    join_item -> join_type JOIN IDENTIFIER ON expression
Rule 46    join_item -> CROSS JOIN IDENTIFIER
Rule 47    join_type -> INNER
Rule 48    join_type -> LEFT
Rule 49    join_type -> RIGHT
Rule 50    join_type -> FULL
Rule 51    join_type -> empty
Rule 52    opt_where -> WHERE expression
Rule 53    opt_where -> empty
Rule 54    expression -> expression EQUALS expression
Rule 55    expression -> expression NEQ expression
Rule 56    expression -> expression GT expression
Rule 57    expression -> expression LT expression
Rule 58    expression -> expression GE expression
Rule 59    expression -> expression LE expression
Rule 60    expression -> expression AND expression
Rule 61    expression -> expression OR expression
Rule 62    expression -> expression PLUS expression
Rule 63    expression -> expression MINUS expression
Rule 64    expression -> expression STAR expression
Rule 65    expression -> expression DIVIDE expression
Rule 66    expression -> qualified_id
Rule 67    expression -> aggregate_func
Rule 68    expression -> NUMBER
Rule 69    expression -> STRING
Rule 70    expression -> TRUE
Rule 71    expression -> FALSE
Rule 72    expression -> NULL
Rule 73    expression -> LPAREN expression RPAREN
Rule 74    qualified_id -> IDENTIFIER DOT IDENTIFIER
Rule 75    qualified_id -> IDENTIFIER
Rule 76    create_stmt -> CREATE TABLE IDENTIFIER LPAREN column_defs RPAREN
Rule 77    column_defs -> column_def
Rule 78    column_defs -> column_defs COMMA column_def
Rule 79    column_def -> IDENTIFIER data_type
Rule 80    data_type -> INT
Rule 81    data_type -> TEXT
Rule 82    data_type -> FLOAT
Rule 83    insert_stmt -> INSERT INTO IDENTIFIER VALUES tuple_list
Rule 84    tuple_list -> LPAREN value_list RPAREN
Rule 85    tuple_list -> tuple_list COMMA LPAREN value_list RPAREN
Rule 86    value_list -> expression
Rule 87    value_list -> value_list COMMA expression
Rule 88    delete_stmt -> DELETE FROM IDENTIFIER opt_where
Rule 89    update_stmt -> UPDATE IDENTIFIER SET assignment_list opt_where
Rule 90    assignment_list -> assignment
Rule 91    assignment_list -> assignment_list COMMA assignment
Rule 92    assignment -> IDENTIFIER EQUALS expression
Rule 93    drop_stmt -> DROP TABLE IDENTIFIER
Rule 94    opt_semicolon -> SEMICOLON
Rule 95    opt_semicolon -> empty
Rule 96    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 
ALTER                : 
AND                  : 60
AS                   : 14 35
ASC                  : 20
AVG                  : 38
BETWEEN              : 
BY                   : 18 23
COMMA                : 26 33 78 85 87 91
COUNT                : 37
CREATE               : 76
CROSS                : 46
DELETE               : 88
DESC                 : 21
DIVIDE               : 65
DOT                  : 74
DROP                 : 93
EQUALS               : 54 92
EXCEPT               : 17
FALSE                : 71
FLOAT                : 82
FROM                 : 11 88
FULL                 : 50
GE                   : 58
GROUP                : 23
GT                   : 56
HAVING               : 27
IDENTIFIER           : 12 14 18 35 45 46 74 74 75 76 79 83 88 89 92 93
IN                   : 
INNER                : 47
INSERT               : 83
INT                  : 80
INTERSECT            : 16
INTO                 : 83
JOIN                 : 45 46
LE                   : 59
LEFT                 : 48
LIMIT                : 29
LPAREN               : 13 14 36 37 38 39 40 73 76 84 85
LT                   : 57
MAX                  : 40
MIN                  : 39
MINUS                : 63
NEQ                  : 55
NULL                 : 72
NUMBER               : 29 68
ON                   : 45
OR                   : 61
ORDER                : 18
PLUS                 : 62
RIGHT                : 49
RPAREN               : 13 14 36 37 38 39 40 73 76 84 85
SELECT               : 11
SEMICOLON            : 94
SET                  : 89
SHOW                 : 10
STAR                 : 31 64
STRING               : 69
SUM                  : 36
TABLE                : 76 93
TABLES               : 10
TEXT                 : 81
TRUE                 : 70
UNION                : 15
UPDATE               : 89
VALUES               : 83
WHERE                : 52
error                : 

Nonterminals, with rules where they appear

aggregate_func       : 67
assignment           : 90 91
assignment_list      : 89 91
column_def           : 77 78
column_defs          : 76 78
create_stmt          : 7
data_type            : 79
delete_stmt          : 6
drop_stmt            : 8
empty                : 19 22 24 28 30 42 51 53 95
expression           : 27 34 35 45 52 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 73 86 87 92
from_clause          : 11
group_list           : 23 26
insert_stmt          : 4
join_item            : 43 44
join_list            : 41 44
join_type            : 45
opt_asc_desc         : 18
opt_groupby          : 11
opt_having           : 23
opt_joins            : 11
opt_limit            : 11
opt_orderby          : 11
opt_semicolon        : 1
opt_where            : 11 88 89
projection_item      : 32 33
projections          : 11 33
qualified_id         : 25 26 36 37 38 39 40 66
query_content        : 1
select_statement     : 2 13 14 15 15 16 16 17 17
set_operation        : 3
show_tables_stmt     : 9
statement            : 0
tuple_list           : 83 85
update_stmt          : 5
value_list           : 84 85 87

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . query_content opt_semicolon
    (2) query_content -> . select_statement
    (3) query_content -> . set_operation
    (4) query_content -> . insert_stmt
    (5) query_content -> . update_stmt
    (6) query_content -> . delete_stmt
    (7) query_content -> . create_stmt
    (8) query_content -> . drop_stmt
    (9) query_content -> . show_tables_stmt
    (11) select_statement -> . SELECT projections FROM from_clause opt_joins opt_where opt_groupby opt_orderby opt_limit
    (15) set_operation -> . select_statement UNION select_statement
    (16) set_operation -> . select_statement INTERSECT select_statement
    (17) set_operation -> . select_statement EXCEPT select_statement
    (83) insert_stmt -> . INSERT INTO IDENTIFIER VALUES tuple_list
    (89) update_stmt -> . UPDATE IDENTIFIER SET assignment_list opt_where
    (88) delete_stmt -> . DELETE FROM IDENTIFIER opt_where
    (76) create_stmt -> . CREATE TABLE IDENTIFIER LPAREN column_defs RPAREN
    (93) drop_stmt -> . DROP TABLE IDENTIFIER
    (10) show_tables_stmt -> . SHOW TABLES

    SELECT          shift and go to state 11
    INSERT          shift and go to state 12
    UPDATE          shift and go to state 13
    DELETE          shift and go to state 14
    CREATE          shift and go to state 15
    DROP            shift and go to state 16
    SHOW            shift and go to state 17

    statement                      shift and go to state 1
    query_content                  shift and go to state 2
    select_statement               shift and go to state 3
    set_operation                  shift and go to state 4
    insert_stmt                    shift and go to state 5
    update_stmt                    shift and go to state 6
    delete_stmt                    shift and go to state 7
    create_stmt                    shift and go to state 8
    drop_stmt                      shift and go to state 9
    show_tables_stmt               shift and go to state 10

state 1

    (0) S' -> statement .



state 2

    (1) statement -> query_content . opt_semicolon
    (94) opt_semicolon -> . SEMICOLON
    (95) opt_semicolon -> . empty
    (96) empty -> .

    SEMICOLON       shift and go to state 19
    $end            reduce using rule 96 (empty -> .)

    opt_semicolon                  shift and go to state 18
    empty                          shift and go to state 20

state 3

    (2) query_content -> select_statement .
    (15) set_operation -> select_statement . UNION select_statement
    (16) set_operation -> select_statement . INTERSECT select_statement
    (17) set_operation -> select_statement . EXCEPT select_statement

    SEMICOLON       reduce using rule 2 (query_content -> select_statement .)
    $end            reduce using rule 2 (query_content -> select_statement .)
    UNION           shift and go to state 21
    INTERSECT       shift and go to state 22
    EXCEPT          shift and go to state 23


state 4

    (3) query_content -> set_operation .

    SEMICOLON       reduce using rule 3 (query_content -> set_operation .)
    $end            reduce using rule 3 (query_content -> set_operation .)


state 5

    (4) query_content -> insert_stmt .

    SEMICOLON       reduce using rule 4 (query_content -> insert_stmt .)
    $end            reduce using rule 4 (query_content -> insert_stmt .)


state 6

    (5) query_content -> update_stmt .

    SEMICOLON       reduce using rule 5 (query_content -> update_stmt .)
    $end            reduce using rule 5 (query_content -> update_stmt .)


state 7

    (6) query_content -> delete_stmt .

    SEMICOLON       reduce using rule 6 (query_content -> delete_stmt .)
    $end            reduce using rule 6 (query_content -> delete_stmt .)


state 8

    (7) query_content -> create_stmt .

    SEMICOLON       reduce using rule 7 (query_content -> create_stmt .)
    $end            reduce using rule 7 (query_content -> create_stmt .)


state 9

    (8) query_content -> drop_stmt .

    SEMICOLON       reduce using rule 8 (query_content -> drop_stmt .)
    $end            reduce using rule 8 (query_content -> drop_stmt .)


state 10

    (9) query_content -> show_tables_stmt .

    SEMICOLON       reduce using rule 9 (query_content -> show_tables_stmt .)
    $end            reduce using rule 9 (query_content -> show_tables_stmt .)


state 11

    (11) select_statement -> SELECT . projections FROM from_clause opt_joins opt_where opt_groupby opt_orderby opt_limit
    (31) projections -> . STAR
    (32) projections -> . projection_item
    (33) projections -> . projections COMMA projection_item
    (34) projection_item -> . expression
    (35) projection_item -> . expression AS IDENTIFIER
    (54) expression -> . expression EQUALS expression
    (55) expression -> . expression NEQ expression
    (56) expression -> . expression GT expression
    (57) expression -> . expression LT expression
    (58) expression -> . expression GE expression
    (59) expression -> . expression LE expression
    (60) expression -> . expression AND expression
    (61) expression -> . expression OR expression
    (62) expression -> . expression PLUS expression
    (63) expression -> . expression MINUS expression
    (64) expression -> . expression STAR expression
    (65) expression -> . expression DIVIDE expression
    (66) expression -> . qualified_id
    (67) expression -> . aggregate_func
    (68) expression -> . NUMBER
    (69) expression -> . STRING
    (70) expression -> . TRUE
    (71) expression -> . FALSE
    (72) expression -> . NULL
    (73) expression -> . LPAREN expression RPAREN
    (74) qualified_id -> . IDENTIFIER DOT IDENTIFIER
    (75) qualified_id -> . IDENTIFIER
    (36) aggregate_func -> . SUM LPAREN qualified_id RPAREN
    (37) aggregate_func -> . COUNT LPAREN qualified_id RPAREN
    (38) aggregate_func -> . AVG LPAREN qualified_id RPAREN
    (39) aggregate_func -> . MIN LPAREN qualified_id RPAREN
    (40) aggregate_func -> . MAX LPAREN qualified_id RPAREN

    STAR            shift and go to state 25
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    NULL            shift and go to state 35
    LPAREN          shift and go to state 36
    IDENTIFIER      shift and go to state 28
    SUM             shift and go to state 37
    COUNT           shift and go to state 38
    AVG             shift and go to state 39
    MIN             shift and go to state 40
    MAX             shift and go to state 41

    projections                    shift and go to state 24
    projection_item                shift and go to state 26
    expression                     shift and go to state 27
    qualified_id                   shift and go to state 29
    aggregate_func                 shift and go to state 30

state 12

    (83) insert_stmt -> INSERT . INTO IDENTIFIER VALUES tuple_list

    INTO            shift and go to state 42


state 13

    (89) update_stmt -> UPDATE . IDENTIFIER SET assignment_list opt_where

    IDENTIFIER      shift and go to state 43


state 14

    (88) delete_stmt -> DELETE . FROM IDENTIFIER opt_where

    FROM            shift and go to state 44


state 15

    (76) create_stmt -> CREATE . TABLE IDENTIFIER LPAREN column_defs RPAREN

    TABLE           shift and go to state 45


state 16

    (93) drop_stmt -> DROP . TABLE IDENTIFIER

    TABLE           shift and go to state 46


state 17

    (10) show_tables_stmt -> SHOW . TABLES

    TABLES          shift and go to state 47


state 18

    (1) statement -> query_content opt_semicolon .

    $end            reduce using rule 1 (statement -> query_content opt_semicolon .)


state 19

    (94) opt_semicolon -> SEMICOLON .

    $end            reduce using rule 94 (opt_semicolon -> SEMICOLON .)


state 20

    (95) opt_semicolon -> empty .

    $end            reduce using rule 95 (opt_semicolon -> empty .)


state 21

    (15) set_operation -> select_statement UNION . select_statement
    (11) select_statement -> . SELECT projections FROM from_clause opt_joins opt_where opt_groupby opt_orderby opt_limit

    SELECT          shift and go to state 11

    select_statement               shift and go to state 48

state 22

    (16) set_operation -> select_statement INTERSECT . select_statement
    (11) select_statement -> . SELECT projections FROM from_clause opt_joins opt_where opt_groupby opt_orderby opt_limit

    SELECT          shift and go to state 11

    select_statement               shift and go to state 49

state 23

    (17) set_operation -> select_statement EXCEPT . select_statement
    (11) select_statement -> . SELECT projections FROM from_clause opt_joins opt_where opt_groupby opt_orderby opt_limit

    SELECT          shift and go to state 11

    select_statement               shift and go to state 50

state 24

    (11) select_statement -> SELECT projections . FROM from_clause opt_joins opt_where opt_groupby opt_orderby opt_limit
    (33) projections -> projections . COMMA projection_item

    FROM            shift and go to state 51
    COMMA           shift and go to state 52


state 25

    (31) projections -> STAR .

    FROM            reduce using rule 31 (projections -> STAR .)
    COMMA           reduce using rule 31 (projections -> STAR .)


state 26

    (32) projections -> projection_item .

    FROM            reduce using rule 32 (projections -> projection_item .)
    COMMA           reduce using rule 32 (projections -> projection_item .)


state 27

    (34) projection_item -> expression .
    (35) projection_item -> expression . AS IDENTIFIER
    (54) expression -> expression . EQUALS expression
    (55) expression -> expression . NEQ expression
    (56) expression -> expression . GT expression
    (57) expression -> expression . LT expression
    (58) expression -> expression . GE expression
    (59) expression -> expression . LE expression
    (60) expression -> expression . AND expression
    (61) expression -> expression . OR expression
    (62) expression -> expression . PLUS expression
    (63) expression -> expression . MINUS expression
    (64) expression -> expression . STAR expression
    (65) expression -> expression . DIVIDE expression

    FROM            reduce using rule 34 (projection_item -> expression .)
    COMMA           reduce using rule 34 (projection_item -> expression .)
    AS              shift and go to state 53
    EQUALS          shift and go to state 54
    NEQ             shift and go to state 55
    GT              shift and go to state 56
    LT              shift and go to state 57
    GE              shift and go to state 58
    LE              shift and go to state 59
    AND             shift and go to state 60
    OR              shift and go to state 61
    PLUS            shift and go to state 62
    MINUS           shift and go to state 63
    STAR            shift and go to state 64
    DIVIDE          shift and go to state 65


state 28

    (74) qualified_id -> IDENTIFIER . DOT IDENTIFIER
    (75) qualified_id -> IDENTIFIER .

    DOT             shift and go to state 66
    AS              reduce using rule 75 (qualified_id -> IDENTIFIER .)
    EQUALS          reduce using rule 75 (qualified_id -> IDENTIFIER .)
    NEQ             reduce using rule 75 (qualified_id -> IDENTIFIER .)
    GT              reduce using rule 75 (qualified_id -> IDENTIFIER .)
    LT              reduce using rule 75 (qualified_id -> IDENTIFIER .)
    GE              reduce using rule 75 (qualified_id -> IDENTIFIER .)
    LE              reduce using rule 75 (qualified_id -> IDENTIFIER .)
    AND             reduce using rule 75 (qualified_id -> IDENTIFIER .)
    OR              reduce using rule 75 (qualified_id -> IDENTIFIER .)
    PLUS            reduce using rule 75 (qualified_id -> IDENTIFIER .)
    MINUS           reduce using rule 75 (qualified_id -> IDENTIFIER .)
    STAR            reduce using rule 75 (qualified_id -> IDENTIFIER .)
    DIVIDE          reduce using rule 75 (qualified_id -> IDENTIFIER .)
    FROM            reduce using rule 75 (qualified_id -> IDENTIFIER .)
    COMMA           reduce using rule 75 (qualified_id -> IDENTIFIER .)
    RPAREN          reduce using rule 75 (qualified_id -> IDENTIFIER .)
    SEMICOLON       reduce using rule 75 (qualified_id -> IDENTIFIER .)
    $end            reduce using rule 75 (qualified_id -> IDENTIFIER .)
    GROUP           reduce using rule 75 (qualified_id -> IDENTIFIER .)
    ORDER           reduce using rule 75 (qualified_id -> IDENTIFIER .)
    LIMIT           reduce using rule 75 (qualified_id -> IDENTIFIER .)
    UNION           reduce using rule 75 (qualified_id -> IDENTIFIER .)
    INTERSECT       reduce using rule 75 (qualified_id -> IDENTIFIER .)
    EXCEPT          reduce using rule 75 (qualified_id -> IDENTIFIER .)
    WHERE           reduce using rule 75 (qualified_id -> IDENTIFIER .)
    CROSS           reduce using rule 75 (qualified_id -> IDENTIFIER .)
    INNER           reduce using rule 75 (qualified_id -> IDENTIFIER .)
    LEFT            reduce using rule 75 (qualified_id -> IDENTIFIER .)
    RIGHT           reduce using rule 75 (qualified_id -> IDENTIFIER .)
    FULL            reduce using rule 75 (qualified_id -> IDENTIFIER .)
    JOIN            reduce using rule 75 (qualified_id -> IDENTIFIER .)
    HAVING          reduce using rule 75 (qualified_id -> IDENTIFIER .)


state 29

    (66) expression -> qualified_id .

    AS              reduce using rule 66 (expression -> qualified_id .)
    EQUALS          reduce using rule 66 (expression -> qualified_id .)
    NEQ             reduce using rule 66 (expression -> qualified_id .)
    GT              reduce using rule 66 (expression -> qualified_id .)
    LT              reduce using rule 66 (expression -> qualified_id .)
    GE              reduce using rule 66 (expression -> qualified_id .)
    LE              reduce using rule 66 (expression -> qualified_id .)
    AND             reduce using rule 66 (expression -> qualified_id .)
    OR              reduce using rule 66 (expression -> qualified_id .)
    PLUS            reduce using rule 66 (expression -> qualified_id .)
    MINUS           reduce using rule 66 (expression -> qualified_id .)
    STAR            reduce using rule 66 (expression -> qualified_id .)
    DIVIDE          reduce using rule 66 (expression -> qualified_id .)
    FROM            reduce using rule 66 (expression -> qualified_id .)
    COMMA           reduce using rule 66 (expression -> qualified_id .)
    RPAREN          reduce using rule 66 (expression -> qualified_id .)
    SEMICOLON       reduce using rule 66 (expression -> qualified_id .)
    $end            reduce using rule 66 (expression -> qualified_id .)
    GROUP           reduce using rule 66 (expression -> qualified_id .)
    ORDER           reduce using rule 66 (expression -> qualified_id .)
    LIMIT           reduce using rule 66 (expression -> qualified_id .)
    UNION           reduce using rule 66 (expression -> qualified_id .)
    INTERSECT       reduce using rule 66 (expression -> qualified_id .)
    EXCEPT          reduce using rule 66 (expression -> qualified_id .)
    WHERE           reduce using rule 66 (expression -> qualified_id .)
    CROSS           reduce using rule 66 (expression -> qualified_id .)
    INNER           reduce using rule 66 (expression -> qualified_id .)
    LEFT            reduce using rule 66 (expression -> qualified_id .)
    RIGHT           reduce using rule 66 (expression -> qualified_id .)
    FULL            reduce using rule 66 (expression -> qualified_id .)
    JOIN            reduce using rule 66 (expression -> qualified_id .)


state 30

    (67) expression -> aggregate_func .

    AS              reduce using rule 67 (expression -> aggregate_func .)
    EQUALS          reduce using rule 67 (expression -> aggregate_func .)
    NEQ             reduce using rule 67 (expression -> aggregate_func .)
    GT              reduce using rule 67 (expression -> aggregate_func .)
    LT              reduce using rule 67 (expression -> aggregate_func .)
    GE              reduce using rule 67 (expression -> aggregate_func .)
    LE              reduce using rule 67 (expression -> aggregate_func .)
    AND             reduce using rule 67 (expression -> aggregate_func .)
    OR              reduce using rule 67 (expression -> aggregate_func .)
    PLUS            reduce using rule 67 (expression -> aggregate_func .)
    MINUS           reduce using rule 67 (expression -> aggregate_func .)
    STAR            reduce using rule 67 (expression -> aggregate_func .)
    DIVIDE          reduce using rule 67 (expression -> aggregate_func .)
    FROM            reduce using rule 67 (expression -> aggregate_func .)
    COMMA           reduce using rule 67 (expression -> aggregate_func .)
    RPAREN          reduce using rule 67 (expression -> aggregate_func .)
    SEMICOLON       reduce using rule 67 (expression -> aggregate_func .)
    $end            reduce using rule 67 (expression -> aggregate_func .)
    GROUP           reduce using rule 67 (expression -> aggregate_func .)
    ORDER           reduce using rule 67 (expression -> aggregate_func .)
    LIMIT           reduce using rule 67 (expression -> aggregate_func .)
    UNION           reduce using rule 67 (expression -> aggregate_func .)
    INTERSECT       reduce using rule 67 (expression -> aggregate_func .)
    EXCEPT          reduce using rule 67 (expression -> aggregate_func .)
    WHERE           reduce using rule 67 (expression -> aggregate_func .)
    CROSS           reduce using rule 67 (expression -> aggregate_func .)
    INNER           reduce using rule 67 (expression -> aggregate_func .)
    LEFT            reduce using rule 67 (expression -> aggregate_func .)
    RIGHT           reduce using rule 67 (expression -> aggregate_func .)
    FULL            reduce using rule 67 (expression -> aggregate_func .)
    JOIN            reduce using rule 67 (expression -> aggregate_func .)


state 31
